modify: java 21 upgrade and dependency upgrades
JU-27